# my_todo_app

./: .flake8  .pre-commit-config.yaml  idea  my_todo.db  pyproject.toml  steps.md  tentar.md  veryImportantTerminalCommands.md
coisas/: .cz.yaml  .gitchangelog.rc
my_todo_app/: db_init.py  layouts.py  main.py  models.py  services.py  todo.kv  utils.py
tests/: test_services.py
